# etherealink

./: README.md  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/etherealink/: config.py  crud.py  database.py  keygen.py  main.py  schemas.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Admin.vue  Form.vue  Header.vue  Redirector.vue
frontend/src/router/: index.js
src/etherealink/: database.py  main.py  models.py  schemas.py
